EDU-1287 Fix homepage overflow on mobile

--- a/src/components/homepage/homepage-document-cards.less
+++ b/src/components/homepage/homepage-document-cards.less
@@ -7,12 +7,10 @@
 }
 
 .HomepageDocumentCards-cards {
-  display: flex;
-  flex-wrap: wrap;
+  .m-card-wrapper;
   justify-content: center;
 
   .DocumentCard {
     .m-row-card(3) !important;
-    margin: @edu-content-padding;
   }
 }
